# kerek

./: '  README.md  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml
.cursor/rules/: rust.mdc
.github/workflows/: main.yml
api/: .gitignore  COMPILER_README.md  Cargo.toml  Dockerfile  README.md  app.py
api/src/: error.rs  main.rs
api/src/compiler/: handler.rs  mod.rs  models.rs  security.rs  service.rs
api/src/conversations/: handler.rs  mod.rs  service.rs
api/src/db/: mod.rs
api/src/groups/: handler.rs  service.rs
api/src/handlers/: user.rs
api/src/middleware/: auth.rs  logger.rs  mod.rs
api/src/models/: conversation.rs  group.rs  message.rs  mod.rs  post.rs  user.rs
api/src/posts/: handler.rs  service.rs
api/src/users/: handler.rs  service.rs
api/src/utils/: db_client.rs  jwt.rs  mod.rs  one_to_one.rs  seed.rs  websocket.rs
api/src/websocket/: handler.rs  mod.rs  server.rs  session.rs
app/: layout.tsx
app/providers/: online-status-provider.tsx
drizzle/: 0000_quiet_prima.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/: CONVERSATION_CUSTOMIZATION.md  Dockerfile  components.json  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: env.ts
game/: Dockerfile  package.json  pnpm-lock.yaml
game/src/: index.ts  speedTypingLogic.ts
src/: env.ts
src/app/: globals.css  page.tsx
src/components/: animated-button.tsx  animation.tsx  features.tsx  hero-section.tsx  (+1 more)
web-socket/: README.md  TEST_CANVAS.md  package.json  pnpm-lock.yaml  test-shared-canvas.js  test-shared-canvas.ts
(+157 files in other folders)
