[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-web-actors = "4.2"
bcrypt = "0.17.0"
chrono = "0.4.41"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
scylla = "1.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v1"] }
actix = "0.13"
actix-broker = "0.4"
tungstenite = "0.26.2"
log = "0.4.27"
actix-ws = "0.3.0"
rand = "0.9.1"
